--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,12 +8,9 @@
     <title>GetHired-job search</title>
     <link rel="stylesheet" href="mm2.css">
     <link rel="stylesheet" media="screen and (max-width:1500px)" href="screen.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Mochiy+Pop+P+One&family=The+Nautigal&family=Ubuntu:ital,wght@1,300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Mochiy+Pop+P+One&family=The+Nautigal&family=Ubuntu:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fontawesome.com/v5.15/icons/laptop-house?style=solid">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
@@ -29,37 +25,74 @@
         <title>GetHired-job search</title>
         <link rel="stylesheet" href="mm2.css">
         <link rel="stylesheet" media="screen and (max-width:1500px)" href="screen.css">
-        <link
-            href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Mochiy+Pop+P+One&family=The+Nautigal&family=Ubuntu:ital,wght@1,300&display=swap"
-            rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Mochiy+Pop+P+One&family=The+Nautigal&family=Ubuntu:ital,wght@1,300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fontawesome.com/v5.15/icons/laptop-house?style=solid">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </head>
 
     <body>
-        <div class="container">
-            <h1>Dashboard</h1>
 
-            <a href="/logout">Log Out</a>
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <span class="navbar-brand mb-0 h1">Dashboard</span>
+                <div class="ms-auto">
+                    <a href="/logout">Log Out</a>
+                </div>
+            </div>
+        </nav>
+        <div class="container">
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope="col">Name</th>
+                        <th scope="col">First_Name</th>
+                        <th scope="col">Last_Name</th>
+                        <th scope="col">Contact</th>
+                        <th scope="col">Date_of_Birth</th>
+                        <th scope="col">Gender</th>
                         <th scope="col">Email</th>
+                        <th scope="col">City</th>
+                        <th scope="col">State</th>
+                        <th scope="col">Pincode</th>
                         <th scope="col">Resume</th>
                     </tr>
                 </thead>
                 <tbody>
                     <% items.forEach(item=> { %>
-                        
+
                         <tr>
-                            <td><%=item.name%></td>
-                            <td><%=item.email%></td>
-                            
+                            <td>
+                                <%=item.First_Name%>
+                            </td>
+                            <td>
+                                <%=item.Last_Name%>
+                            </td>
+                            <td>
+                                <%=item.Contact%>
+                            </td>
+                            <td>
+                                <%=item.Date_of_Birth%>
+                            </td>
+                            <td>
+                                <%=item.Gender%>
+                            </td>
+                            <td>
+                                <%=item.Email%>
+                            </td>
+                            <td>
+                                <%=item.City%>
+                            </td>
+                            <td>
+                                <%=item.State%>
+                            </td>
+                            <td>
+                                <%=item.Pincode%>
+                            </td>
+                            <td>
+                                <%=item.Resume%>
+                            </td>
                             <td><a href="/downloadFile/<%= item.img.data %>">Download</a></td>
                         </tr>
-                    <% })%>
+                        <% })%>
 
                 </tbody>
             </table>
