--- a/views/getHired.ejs
+++ b/views/getHired.ejs
@@ -1,3 +1,5 @@
+<!-- Get Link Button -->
+
 <!doctype html>
 <html lang="en">
 
@@ -7,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Profile-JobsIndia.com</title>
     <style>
@@ -16,99 +19,95 @@
             margin: 0;
             box-sizing: border-box;
         }
-        
+
         body {
-            background-color: #0d6efd;
+            background-color: rgb(161, 196, 202);
+            background: url('profile2.jpeg');
         }
-        
+
         .row {
+
             margin: auto;
             background-color: white;
             border-radius: 30px;
             box-shadow: 12px 12px 22px gray;
         }
-        
+
         img {
             border-radius: 50%;
             width: 102px;
         }
-        
+
         .btn {
             width: 100%;
             color: white;
         }
-        
+
         .btn:hover {
             background-color: white;
             border: 1px solid blue;
             color: blue;
         }
-        
+
         input {
             margin-bottom: 20px;
         }
     </style>
     <script src="http://jsfiddle.net/5WkVW/1/"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">    </script>
 </head>
 
 <body>
     <section class="form my-4 mx-7  ">
         <div class="container">
             <div class="row no-gutters">
-
-                <div class="col-lg-3 my-5">
-                    <ul class="navbar1" type=none>
-                        <center>
+                <div class="col-lg-2 my-5">
+                    <center>
+                        <ul class="navbar1" type=none>
                             <li>
-                                <a href="profile.html" class="active">
-                                    <img src="images1.jpeg" alt="No image">
-                                </a>
-                                <p>Personnal info</p>
+                                <img src="images1.jpeg" alt="No image">
+                                <p>Personnal information</p>
                             </li>
 
-                            <li>
-                                <a href="resumeupload.html" class="active">
-                                    <img src="images5.jpeg" alt="No image">
-                                </a>
-                                <p>Resume upload</p>
-                            </li>
-                        </center>
-                    </ul>
+                        </ul>
+                    </center>
                 </div>
-
-                <div class="col-lg-9" style="margin-left: auto 50px">
+                <div class="col-lg-9">
                     <center>
                         <h1 class="font-weight-bold">JobsIndia.com</h1>
                         <H4 style="margin: 20px;">Personal information</H4>
                     </center>
                     <h6>(Press tab to go on next field)</h6>
-                    <form action="/upload" method="post" enctype="multipart/form-data">
+                    <form action="/get-hired" method="post">
                         <div class="col-md-6">
-                            <label for="First name">First name*</label>
-                            <input name="First_Name" type="text" required class="form-control" placeholder="First name" aria-label="First name" style="margin-bottom: 20px; ">
-                            <label for="Last name">Last name*</label>
-                            <input name="Last_Name" type="text" required class="form-control" placeholder="Last name" aria-label="Last name" style="margin-bottom: 20px;">
-                            <label for="Contact1" class="form-label">Contact number*</label>
-                            <input name="Contact" type="text" required class="form-control" id="Contact1" placeholder="9876xxxxxx">
-                            <label type="date1" class="form-label">Date of birth*</label>
-                            <input name="Date_of_Birth" type="date" required id="date1" class="form-control">
-                            <label for="inputGender" class="form-label">Gender*</label>
-                            <select name="Gender" id="inputGender" required class="form-select" style="margin-bottom: 20px;">
+                            <label for="First name">First name</label>
+                            <input type="text" class="form-control" name="firstName" placeholder="First name" aria-label="First name"
+                                style="margin-bottom: 20px; width: 475px">
+                            <label for="Last name">Last name</label>
+                            <input type="text" class="form-control" name="lastName" placeholder="Last name" aria-label="Last name"
+                                style="margin-bottom: 20px; width: 475px">
+                            <label for="Contact1" class="form-label">Contact number:</label>
+                            <input type="text" class="form-control" name="contact" id="Contact1">
+                            <label for="inputGender" class="form-label">Gender:</label>
+                            <select id="inputGender" class="form-select" name="gender" style="margin-bottom: 20px;">
                                 <option selected>Choose...</option>
-                                  <option value="Male">Male</option>
-                                  <option value="Female">Female</option>
-                                  <option value="Other">Other</option>
+                                <option value="male">Male</option>
+                                <option value="female">Female</option>
+                                <option value="other">Other</option>
                             </select>
-                            <label for="inputEmail4" class="form-label">Email*</label>
-                            <input name="Email" type="email" required class="form-control" id="inputEmail4" placeholder="example@xyz.com">
+                            <label for="inputEmail4" class="form-label">Email</label>
+                            <input type="email" class="form-control" name="email" id="inputEmail4">
+                            <label for="inputAddress" class="form-label">Address</label>
+                            <input type="text" class="form-control" name="address" id="inputAddress" placeholder="1234 Main St">
+                            <label for="inputAddress2" class="form-label">Address 2</label>
+                            <input type="text" class="form-control" name="address2" id="inputAddress2"
+                                placeholder="Apartment, studio, or floor">
                             <label for="inputCity" class="form-label">City</label>
-                            <input name="City" type="text" class="form-control" id="inputCity" placeholder="Indore, Delhi, etc">
+                            <input type="text" name="city" class="form-control" id="inputCity">
                             <label for="inputState" class="form-label">State</label>
-                            <select name="State" id="inputState" class="form-select" style="margin-bottom: 20px;">
-                              <option selected>Choose...</option>
+                            <select id="inputState" name="state" class="form-select" style="margin-bottom: 20px;">
+                                <option selected>Choose...</option>
                                 <option value="Andhra Pradesh">Andhra Pradesh</option>
                                 <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
                                 <option value="Arunachal Pradesh">Arunachal Pradesh</option>
@@ -147,22 +146,25 @@
                                 <option value="West Bengal">West Bengal</option>
                             </select>
                             <label for="inputZip" class="form-label">Pincode:</label>
-                            <input name="Pincode" type="text" class="form-control" id="inputZip" placeholder="xxxxxx">
-
-                            <label for="inputZip" class="form-label">Resume:</label>
-                            <input type="file" class="form-control" name="resume" value="resume" required>
-                            <p>Pdf files only</p>
-
-                            <button type="submit" class="btn btn-primary" style="margin-bottom: 30px;">Submit</button>
+                            <input type="text" name="pincode" class="form-control" id="inputZip">
+                            <label class="form-label mt-2">Upload Resume</label>
+                            <div class="input-group">
+                                <input type="file" name="resume" class="form-control" id="inputGroupFile02">
+                            </div>
+                            <div class="mt-0 mb-5">
+                                <p style="font-size: 12px;">Only pdf format*</p>
+                            </div>
+                            <button type="submit" class="btn btn-primary" style="margin-bottom: 30px;">Next</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </section>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
