--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -63,17 +63,10 @@
                     <ul class="navbar1" type=none>
                         <center>
                             <li>
-                                <a href="profile.html" class="active">
+                                <a href="#" class="active">
                                     <img src="images1.jpeg" alt="No image">
                                 </a>
                                 <p>Personnal info</p>
-                            </li>
-
-                            <li>
-                                <a href="resumeupload.html" class="active">
-                                    <img src="images5.jpeg" alt="No image">
-                                </a>
-                                <p>Resume upload</p>
                             </li>
                         </center>
                     </ul>
