--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,99 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Login-JobsIndia.com</title>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background-color: rgb(161, 196, 202);
-        }
-
-        .row {
-
-            margin: auto;
-            background-color: white;
-            border-radius: 30px;
-            box-shadow: 12px 12px 22px gray;
-        }
-
-        img {
-            border-top-left-radius: 30px;
-            border-bottom-left-radius: 30px;
-            width: max-content;
-            height: max-content;
-        }
-
-        .btn {
-            width: 100%;
-        }
-
-        .btn:hover {
-            background-color: white;
-            border: 1px solid blue;
-            color: blue;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <section class="form my-4 mx-5  ">
-        <div class="container">
-            <div class="row no-gutters">
-                <div class="col-lg-5 my-5">
-                    <center>
-                        <img src="login1.jpeg" alt="login-image" height="200%">
-                    </center>
-                </div>
-                <div class="col-lg-7">
-                    <h1 class="font-weight-bold">JobsIndia.com</h1>
-                    <H4>Sign in to your account</H4>
-                    <form action="/login" method="post">
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Username</label>
-                            <input type="text" name="username" class="form-control"
-                                aria-describedby="emailHelp" placeholder="Username"
-                                >
-                            <br>
-                            <label for="inputPassword5" class="form-label">Password</label>
-                            <input type="password" class="form-control" name="password"
-                                aria-describedby="passwordHelpBlock">
-                            <br>
-                            <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
-                                <label class="form-check-label" for="exampleCheck1">Agree to <a href="#"> Terms and
-                                        conditions</a></label>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
 
-                        </div>
-                    </form>
-                    <p style="margin: auto;">
-                        <a href="#">Forgot password??</a>
-                    </p>
-                    <p>Don't have an account?
-                        <a href="/sign-up"> Register here!</a>
-                    </p>
-                </div>
+    <div class="logIn p-4 ms-auto me-auto">
+        <div class="ms-auto me-auto mb-3 fitContent">
+            <img src="./images/logo.png" alt="" srcset="">
+        </div>
+        <div class="card col-lg-6 col-md-8 ms-auto me-auto text-center">
+            <div class="card-header">
+                Sign In
+            </div>
+            <div class="card-body">
+                <form action="/login" method="post">
+                    <div class="input-group mb-3">
+                        <input type="text" name="username" class="form-control" aria-label="Sizing example input" placeholder="Username"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="password" name="password" class="form-control" aria-label="Sizing example input"
+                            placeholder="Password" aria-describedby="inputGroup-sizing-default">
+                    </div>
+                    <button class="btn btn-outline-primary" type="submit">Log In</button>
+                </form>
             </div>
         </div>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    </div>
+
+    <script src="./js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
