--- a/views/login.ejs
+++ b/views/login.ejs
@@ -36,6 +36,10 @@
         </div>
     </div>
 
+    <div class="ms-auto me-auto" style="text-align: center;">
+        <a class="text-decoration-none" href="/sign-up">Sign-up</a>
+    </div>
+
     <script src="./js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
