--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,44 +24,44 @@
 
 
 
-                <div class="container mt-5">
-                    <div class="row">
-                        <div class="col-md-5 ps-3 profilePic">
-                            <img class="ms-auto me-auto"
-                                src="./images/253852115_369284928277098_6803301368560095943_n.jpg" alt="" srcset="">
-                        </div>
-                        <div class="col-md-7">
-                            <h1 class="mt-3 nameHead">Lakshay Chawla</h1>
-                            <p>Software Dev | Undergraduate Student</p>
-                            <p><a href="mailto:20bcs6900@cuchd.in">20bcs6900@cuchd.in</a></p>
+            <div class="col-lg-8 mx-auto p-3 py-md-5">
+                <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
+                    <img class="rounded-circle profilePic" src="./images/253852115_369284928277098_6803301368560095943_n.jpg" alt=""
+                            srcset="">
+        
+                </header>
+        
+                <main>
+                    <h1> <%= user.profile.name %> </h1>
+                    <p class="fs-5 col-md-8" style="font-weight: bold;">
+                         <%= user.category %> @ user.profile.course 
+                    </p>
+                    <p class="fs-5 col-md-8">
+                        <%= user.uid.toUpperCase() %> <br>
+                         Section: <%= user.profile.section.toUpperCase() %>  <br>
+                    </p>
+        
+                    <div class="mb-5">
+                        <a href="/docs/5.1/examples/" class="btn btn-primary btn-lg px-4">Get in touch</a>
+                    </div>
+        
+                    <hr class="col-3 col-md-2 mb-5">
+        
+                    <div class="row g-5">
+                        <div class="col-md-10">
+                            <h2>Certificates</h2>
+                            <p>Ready to beyond the starter template? Check out these open source projects that you can quickly
+                                duplicate to a new GitHub repository.</p>
+                            <ul class="icon-list">
+                                <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener"
+                                        target="_blank">Bootstrap npm starter</a></li>
+                                <li class="text-muted">Bootstrap Parcel starter (coming soon!)</li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="card col-lg-10 mt-3">
-                        <div class="blockquote card-header">
-                            Course Name
-                        </div>
-                        <div class="card-body">
-                            <blockquote class="mb-0">
-                                <p>Bachelor of Engineering in Computer Science (Hons.) with speacialization in
-                                    Artificial
-                                    Intelligencd and Machine Learning</p>
-                            </blockquote>
-                        </div>
-                    </div>
-
-                    <div class="card col-lg-10 mt-3">
-                        <div class="blockquote card-header">
-                            Course Name
-                        </div>
-                        <%// certificates.forEach(credential=> { %>
-                            <div class="card-body">
-                                <blockquote class="mb-0">
-                                    <p><%=// credential.title %> </p>
-                                </blockquote>
-                            </div>
-                            <%// }) %>
-                    </div>
-                </div>
+                </main>
+            </div>
+        
         </div>
 
         <script src="/js/bootstrap.bundle.min.js"
