--- a/views/registration_forms/certificate.ejs
+++ b/views/registration_forms/certificate.ejs
@@ -33,6 +33,12 @@
                         aria-describedby="emailHelp">
                 </div>
 
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Course provider</label>
+                    <input type="text" class="form-control" name="credentialSource" id="exampleInputEmail1"
+                        aria-describedby="emailHelp">
+                </div>
+
                 <div class="ms-auto me-auto" style="width: fit-content;">
                     <button class="btn btn-primary" type="submit">Submit</button>
                 </div>
