Mentor module under process

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -21,6 +21,64 @@
             <!-- Navbar -->
             <%- include("./components/header") %>
 
+            <div class="Dashboard">
+                <nav class="navbar navbar-light bg-white">
+                    <div class="container-fluid">
+                        <h1 class="navbar-brand ms-auto me-auto mb-0 h1" style="text-align: center;">20 AIML - A</h1>
+                    </div>
+                </nav>
+        
+                <div class="row mt-2">
+        
+                    <a href="#" class="cardLink col-sm-4">
+                        <div class="card topCards">
+                            <div class="card-body">
+                                <h3 class="card-title">Total Students</h3>
+                                <h1>69 </h1>
+                            </div>
+                        </div>
+                    </a>
+        
+                    <a href="#" class="cardLink col-sm-4">
+                        <div class="card topCards">
+                            <div class="card-body">
+                                <h3 class="card-title">Certifications Registered</h3>
+                                <h1>69 </h1>
+                            </div>
+                        </div>
+                    </a>
+        
+                    <a href="#" class="cardLink col-sm-4">
+                        <div class="card topCards">
+                            <div class="card-body">
+                                <h3 class="card-title">Achievements Registered</h3>
+                                <h1>69 </h1>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+        
+                <div class="row mt-3">
+                    <div class="col-sm-4 mt-2">
+                        <a href="/professional-society-registrations" class="btn btn-primary col-12">View Entries</a>
+                    </div>
+                    <div class="col-sm-4 mt-2">
+                        <a href="#" class="btn btn-primary col-12">Download Entries</a>
+                    </div>
+                    <div class="col-sm-4 mt-2">
+                        <a href="#" class="btn btn-primary col-12">Mail</a>
+                    </div>
+                </div>
+
+                <div class="container-fluid mt-5 col-md-6">
+                    <h5 style="text-align: center;" class="mb-2">Student Search</h5>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search UID" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+
         </div>
 
         <script src="/js/bootstrap.bundle.min.js"
