Minor changes in appearance

--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -11,7 +11,6 @@
         </svg>
     </a>
 
-
     <!-- Header Logo -->
     <a class="navbar-brand maxWidthHide" id="logoCenter" href="#">
         <!-- <img src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"> -->
@@ -35,8 +34,8 @@
                 <input type="text" class="form-control" placeholder="Search" aria-label="Search"
                     aria-describedby="button-addon2">
                 <button class="btn btn-success btn-outline-secondary" type="button" id="button-addon2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff"
-                        class="bi bi-search" style="position: relative; bottom:2px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff" class="bi bi-search"
+                        style="position: relative; bottom:2px;">
                         <path
                             d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                     </svg>
@@ -59,8 +58,7 @@
 
         <nav class="nav showInLg">
             <a class="nav-link active ms-auto" href="/">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-house"
-                    viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                         d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
                     <path fill-rule="evenodd"
@@ -69,8 +67,8 @@
             </a>
             <a class="nav-link" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-bell"
-                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-bell" viewBox="0 0 16 16">
+                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell"
+                    viewBox="0 0 16 16">
                     <path
                         d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
                 </svg>
@@ -90,12 +88,15 @@
     <div class="btn-group me-2 ">
         <button type="button" class="btn profileDropDown" data-bs-toggle="dropdown" aria-expanded="false">
             <div>
-                <img src="/images/253852115_369284928277098_6803301368560095943_n.jpg" width="45" alt=""
-                    srcset="">
+                <img src="/images/253852115_369284928277098_6803301368560095943_n.jpg" width="45" alt="" srcset="">
             </div>
             <div>
-                <p class="profileText"><%= user.profile.name %></p>
-                <p class="profileText"><%= user.category %></p>
+                <p class="profileText">
+                    <%= user.profile.name %>
+                </p>
+                <p class="profileText">
+                    <%= user.category %>
+                </p>
             </div>
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
@@ -127,7 +128,7 @@
                 d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
         </svg>
     </a>
-    <a class="nav-link" href="#">
+    <a class="nav-link" href="">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell"
             viewBox="0 0 16 16">
             <path
@@ -135,8 +136,8 @@
         </svg>
     </a>
     <a class="nav-link me-auto" href="#">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-            class="bi bi-question-circle" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle"
+            viewBox="0 0 16 16">
             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
             <path
                 d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
