--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign up</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
+    <br>
+    <br>
     <div class="container col-lg-12" style="max-width: 730px;">
 
         <div class="ms-auto me-auto mb-3 fitContent">
             <img src="./images/logo.png" alt="" srcset="">
         </div>
-        
+
         <div class="pageHeading">
             <h1>Sign-Up</h1>
         </div>
@@ -41,8 +42,7 @@
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">UID (for students) or E-Code (for class
                     mentors)</label>
-                <input type="text" class="form-control" name="uid" id="exampleInputEmail1"
-                    aria-describedby="emailHelp">
+                <input type="text" class="form-control" name="uid" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
 
             <div class="mb-3">
@@ -61,10 +61,14 @@
                     aria-describedby="emailHelp">
             </div>
 
+            <br>
+
             <div class="ms-auto me-auto" style="width: fit-content;">
                 <button class="btn btn-primary" id="btnSubmit" type="submit">Submit</button>
             </div>
         </form>
+        <br>
+        <br>
     </div>
 
     <script src="./js/bootstrap.bundle.min.js"
