--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,10 +14,8 @@
     <!-- Side Bar -->
     <%- include("./components/sidebar") %>
 
-
         <!-- Body -->
         <div class="bodyContainer">
-
 
             <!-- Navbar -->
             <%- include("./components/header") %>
@@ -35,18 +33,24 @@
                                 <%= user.profile.name %>
                             </h1>
                             <p class="fs-5 col-md-8" style="font-weight: bold;">
-                                <%= user.category %> @ user.profile.course
+                                <%= user.category %>
+                                    <!-- <%= user%> -->
                             </p>
                             <p class="fs-5 col-md-8">
+                                <b>UID:</b>
                                 <%= user.uid.toUpperCase() %> <br>
-                                    Section: <%= user.profile.section.toUpperCase() %> <br>
+                                    <b>Section:</b>
+                                    <%= user.profile.section.toUpperCase() %> <br>
                             </p>
 
-                            <div class="mb-5">
+                            <!-- <div class="mb-5">
                                 <a href="/docs/5.1/examples/" class="btn btn-primary btn-lg px-4">Get in touch</a>
+                            </div> -->
+                            <div class="mb-5">
+                                <a href="/certificate-registration" class="btn btn-primary btn-lg px-4">Upload
+                                    Certificate</a>
                             </div>
 
-<<<<<<< HEAD
                             <hr class="col-3 col-md-2 mb-5">
 
                             <div class="row g-5">
@@ -68,63 +72,67 @@
                                                 <% }); %>
                                     </ul>
                                 </div>
-=======
-
-                <div class="col-lg-8 mx-auto p-3 py-md-5">
-                    <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
-                        <img class="rounded-circle profilePic"
-                            src="./images/253852115_369284928277098_6803301368560095943_n.jpg" alt="" srcset="">
-
-                    </header>
-
-                    <main>
-                        <h1>
-                            <%= user.profile.name %>
-                        </h1>
-                        <p class="fs-5 col-md-8" style="font-weight: bold;">
-                            <%= user.category %>@user.profile.course
-                        </p>
-                        <p class="fs-5 col-md-8">
-                            <%= user.uid.toUpperCase() %> <br>
-                                Section: <%= user.profile.section.toUpperCase() %> <br>
-                        </p>
-
-                        <div class="mb-5">
-                            <a href="/docs/5.1/examples/" class="btn btn-primary btn-lg px-4">Get in touch</a>
-                        </div>
-
-                        <hr class="col-3 col-md-2 mb-5">
-
-                        <div class="row g-5">
-                            <div class="col-md-10">
-                                <h2 class="mb-3">Certificates</h2>
-
-
-                                <ul class="icon-list">
-                                    <% user.certificateSchema.reverse() %>
-                                        <% user.certificateSchema.forEach(element=> { %>
-                                            <li>
-                                                <h5>
-                                                    <%= element.title %>
-                                                </h5>
-                                                <p class="text-muted">
-                                                    - <%= element.source %>
-                                                </p>
-                                            </li>
-                                            <% }); %>
-                                </ul>
->>>>>>> 4a90f37929a652ab7630c8458754c41e5efbba27
-                            </div>
                         </main>
+
+                        <!-- <div class="col-lg-8 mx-auto p-3 py-md-5">
+                                    <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
+                                        <img class="rounded-circle profilePic"
+                                            src="./images/253852115_369284928277098_6803301368560095943_n.jpg" alt=""
+                                            srcset="">
+
+                                    </header> -->
+
+                        <!-- <main>
+                                        <h1>
+                                            <%= user.profile.name %>
+                                        </h1>
+                                        <p class="fs-5 col-md-8" style="font-weight: bold;">
+                                            <%= user.category %>@user.profile.course
+                                        </p>
+                                        <p class="fs-5 col-md-8">
+                                            <%= user.uid.toUpperCase() %> <br>
+                                                Section: <%= user.profile.section.toUpperCase() %> <br>
+                                        </p>
+
+                                        <div class="mb-5">
+                                            <a href="/docs/5.1/examples/" class="btn btn-primary btn-lg px-4">Get in
+                                                touch</a>
+                                        </div>
+
+                                        <hr class="col-3 col-md-2 mb-5">
+
+                                        <div class="row g-5">
+                                            <div class="col-md-10">
+                                                <h2 class="mb-3">Certificates</h2>
+
+
+                                                <ul class="icon-list">
+                                                    <% user.certificateSchema.reverse() %>
+                                                        <% user.certificateSchema.forEach(element=> { %>
+                                                            <li>
+                                                                <h5>
+                                                                    <%= element.title %>
+                                                                </h5>
+                                                                <p class="text-muted">
+                                                                    - <%= element.source %>
+                                                                </p>
+                                                            </li>
+                                                            <% }); %>
+                                                </ul>
+                                                >>>>>>> 4a90f37929a652ab7630c8458754c41e5efbba27
+                                            </div>
+                                    </main> -->
+                        <!-- </div>
+                            <% } %> -->
+
                     </div>
-                    <% } %>
 
-        </div>
 
-        <script src="/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
-        <script src="/js/script.js"></script>
+
+                    <script src="/js/bootstrap.bundle.min.js"
+                        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                        crossorigin="anonymous"></script>
+                    <script src="/js/script.js"></script>
 </body>
 
 </html>
