--- a/views/registration_forms/certificate.ejs
+++ b/views/registration_forms/certificate.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Certificate registration</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/certificate_styles.css">
 
@@ -51,7 +51,7 @@
 
                         <!-- Platform name -->
                         <div class="input-box mb-3">
-                            <span class="details">Platfrom: <span style="color:red">*</span> </span>
+                            <span class="details">Platform: <span style="color:red">*</span> </span>
                             <input type="text" class="form-control" name="platformName"
                                 placeholder="Enter platform name" required>
                         </div>
@@ -96,7 +96,7 @@
 
                         <!-- upload certificate -->
                         <div class="input-box">
-                            <span class="details">Cerdential Link: <span class="req">*</span></span>
+                            <span class="details">Upload Certificate: <span class="req">*</span></span>
                             <div class="drop-zone">
                                 <span class="drop-zone__prompt">Drop file here or click to upload</span>
                                 <input type="file" id="cerificate" name="cerificateFile" class="drop-zone__input"
