--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -44,17 +44,19 @@
         </ul>
 
         <!-- Search Bar -->
-        <div class="input-group minWidthHide ms-auto searchBar">
-            <input type="text" class="form-control" placeholder="Search" aria-label="Search"
-                aria-describedby="button-addon2">
-            <button class="btn btn-success btn-outline-secondary" type="button" id="button-addon2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff" class="bi bi-search"
-                    style="position: relative; bottom:2px;">
-                    <path
-                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-                </svg>
-            </button>
-        </div>
+        <form action="/search" method="get">
+            <div class="input-group minWidthHide ms-auto searchBar">
+                <input type="text" name="search" class="form-control" placeholder="Search" aria-label="Search"
+                    aria-describedby="button-addon2">
+                <button value="search" class="btn btn-success btn-outline-secondary" type="submit" id="button-addon2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff" class="bi bi-search"
+                        style="position: relative; bottom:2px;">
+                        <path
+                            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                    </svg>
+                </button>
+            </div>
+        </form>
 
         <nav class="nav showInLg">
             <a class="nav-link active ms-auto" href="/">
